# omp2cd-LU

./: .gitignore  CMakeLists.txt  Makefile  applu.h  c_print_results.c  c_print_results.h  c_print_results.output.darts.cpp  c_print_results.output.darts.h  c_timers.h  c_timers.output.darts.cpp  c_timers.output.darts.h  lu.c  lu.output.darts.cpp  lu.output.darts.h  lu.zz.c  npb-C.h  npbparams-S.h  npbparams.h  wtime.output.darts.cpp  wtime.output.darts.h
